# GG-Injector

./: CMakeLists.txt  README.md  dllmain.cpp
.github/workflows/: release.yml
resources/: app.manifest
src/: main.cpp
